fixed spacing

--- a/dndstyle.css
+++ b/dndstyle.css
@@ -30,7 +30,7 @@ body {
   border-right: 0px;
 }
 
-.skill-cont {
+.cont {
   outline: 2px solid;
   padding: 5px;
 }
